--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,44 @@
       <version>1.25</version>
     </dependency>
 
+    <!-- SOLR -->
+     
+    <dependency>
+      <groupId>org.apache.solr</groupId>
+      <artifactId>solr-solrj</artifactId>
+      <version>8.3.1</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.apache.solr</groupId>
+      <artifactId>solr-core</artifactId>
+      <version>8.3.1</version>
+      <exclusions>
+      
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>log4j-over-slf4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>          
+        </exclusion>
+        <exclusion>
+         <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>*</artifactId>    
+        </exclusion>      
+        <exclusion>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>*</artifactId>           
+        </exclusion>
+        
+      </exclusions>
+    </dependency>
   </dependencies>
 
   <build>
