--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
      <version>20190722</version>
    </dependency>
 
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-graphics</artifactId>
+      <version>13.0.2</version>
+      <type>pom</type>
+    </dependency>
 
     <!-- SOLR -->
      
